--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="desciption" content="Web Developer as well as the Machine Learning and Data Science Enthusiast" />
     <title>Sriram's Personal Site</title>
+    <style>
+        body {
+            background-color: #71c9ce;
+        }
+
+        hr {
+            background-color: #e3fdfd;
+            border-style: none;
+            height: 2px;
+        }
+    </style>
 </head>
 
 <body>
@@ -25,53 +36,52 @@
         </tr>
     </table>
     <hr>
-    <ol>
-        <h3>My Education</h3>
-        <table cellspacing="10">
-            <thead>
-                <tr>
-                    <th>Year</th>
-                    <th>School</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2011-2018</td>
-                    <td>The Titan School</td>
-                </tr>
-                <tr>
-                    <td>2018-2020</td>
-                    <td>Maharishi Vidya Mandhir</td>
-                </tr>
-                <tr>
-                    <td>2020-Present</td>
-                    <td>PSG College Of Technology</td>
-                </tr>
-            </tbody>
-        </table>
-        <hr>
-        <h3>Skills</h3>
-        <table cellspacing="10">
-            <tbody>
-                <tr>
-                    <td>Graphic Designing</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Python </td>
-                    <td>⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Web Development</td>
-                    <td>⭐⭐</td>
-                </tr>
-            </tbody>
-        </table>
+    <h3>My Education</h3>
+    <table cellspacing="10">
+        <thead>
+            <tr>
+                <th>Year</th>
+                <th>School</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2011-2018</td>
+                <td>The Titan School</td>
+            </tr>
+            <tr>
+                <td>2018-2020</td>
+                <td>Maharishi Vidya Mandhir</td>
+            </tr>
+            <tr>
+                <td>2020-Present</td>
+                <td>PSG College Of Technology</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+        <tbody>
+            <tr>
+                <td>Graphic Designing</td>
+                <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Python </td>
+                <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Web Development</td>
+                <td>⭐⭐</td>
+            </tr>
+        </tbody>
+    </table>
 
-        <hr>
-        <h3><a href="hobbies.html">My Hobbies</a><br></h3>
-        <hr>
-        <h3><a href="contact.html">Contact Me</a></h3>
+    <hr>
+    <h3><a href="hobbies.html">My Hobbies</a><br></h3>
+    <hr>
+    <h3><a href="contact.html">Contact Me</a></h3>
 
 </body>
 
