--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Sriram's Personal Site</title>
     <style>
         body {
-            background-color: #71c9ce;
+            background-color: #cbf1f5;
         }
 
         hr {
-            background-color: #e3fdfd;
-            border-style: none;
-            height: 2px;
+            border-style: dotted none none;
+            border-color: #71c9ce;
+            border-width: 10px;
+            width: 20%;
         }
     </style>
 </head>
@@ -79,9 +80,13 @@
     </table>
 
     <hr>
-    <h3><a href="hobbies.html">My Hobbies</a><br></h3>
+    <center>
+        <h3><a href="hobbies.html">My Hobbies</a><br></h3>
+    </center>
     <hr>
-    <h3><a href="contact.html">Contact Me</a></h3>
+    <center>
+        <h3><a href="contact.html">Contact Me</a></h3>
+    </center>
 
 </body>
 
