--- a/index.html
+++ b/index.html
@@ -5,18 +5,7 @@
     <meta charset="UTF-8">
     <meta name="desciption" content="Web Developer as well as the Machine Learning and Data Science Enthusiast" />
     <title>Sriram's Personal Site</title>
-    <style>
-        body {
-            background-color: #cbf1f5;
-        }
-
-        hr {
-            border-style: dotted none none;
-            border-color: #71c9ce;
-            border-width: 10px;
-            width: 20%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
