--- a/hobbies.html
+++ b/hobbies.html
@@ -8,16 +8,16 @@
     <title>My Hobbies</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <h3>My Hobbies</h3>
     <ol type="i">
         <li>Web Development</li>
+        <li><a href="https://www.instagram.com/graphics_artwork">Graphic Designing</a></li>
         <li>Data Science</li>
-        <li>Machine Learning</li>
-        <li><a href="https://www.instagram.com/graphics_artwork"> Designing</a></li>
+        
     </ol>
 </body>
 
