--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <tr>
             <td><img src="image/Profile Picture.png" alt="Sriram S Profile Pcture" width="300" height="300"></td>
             <td>
-                <h1><strong><a href="https://www.instagram.com/sriramdasavage">Sriram Senthilkumar</a></strong></h1>
-                <p><em>Soon to be Frontend Developer</em></p><br>
+                <h1><strong><a>Sriram Senthilkumar</a></strong></h1>
+                <p><em>First ever website,Go easy on <a href="https://www.instagram.com/sriramdasavage/">me</a></em></p>
+                <br>
                 <p>Hello Viewers, I am <em>Sriram</em> from <strong>PSGTech, Coimbatore </strong>who is currently
                     learning Wweb
                     Development and I have just started to learn the fundamentals of HTML and will be learning CSS and
@@ -54,15 +55,15 @@
     <table cellspacing="10">
         <tbody>
             <tr>
-                <td>Graphic Designing</td>
+                <td class="hover">Graphic Designing</td>
                 <td>⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Python </td>
+                <td class="hover">Python </td>
                 <td>⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Web Development</td>
+                <td class="hover">Web Development</td>
                 <td>⭐⭐</td>
             </tr>
         </tbody>
