--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="desciption" content="Web Developer as well as the Machine Learning and Data Science Enthusiast" />
     <title>Sriram's Personal Site</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
