--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td><img src="image/Profile Picture.png" alt="Sriram S Profile Pcture" width="300" height="300"></td>
             <td>
                 <h1><strong><a>Sriram Senthilkumar</a></strong></h1>
-                <p><em>First ever website,Go easy on <a href="https://www.instagram.com/sriramdasavage/">me</a></em></p>
+                <p><em>First ever website,Go easy on <a href="https://www.instagram.com/sriiiram_/">me</a></em></p>
                 <br>
                 <p>Hello Viewers, I am <em>Sriram</em> from <strong>PSGTech, Coimbatore </strong>who is currently
                     learning Wweb
