--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p><em>First ever website,Go easy on <a href="https://www.instagram.com/sriiiram_/">me</a></em></p>
                 <br>
                 <p>Hello Viewers, I am <em>Sriram</em> from <strong>PSGTech, Coimbatore </strong>who is currently
-                    learning Wweb
+                    learning Web
                     Development and I have just started to learn the fundamentals of HTML and will be learning CSS and
                     JavaScript
                     and will be learning Flutter and Backend in the future with node.js or Angular or go on to develop
