--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
                 <p><em>First ever website,Go easy on <a href="https://www.instagram.com/sriiiram_/">me</a></em></p>
                 <br>
                 <p>Hello Viewers, I am <em>Sriram</em> from <strong>PSGTech, Coimbatore </strong>who is currently
-                    learning Web
+                    learning Wweb
                     Development and I have just started to learn the fundamentals of HTML and will be learning CSS and
                     JavaScript
                     and will be learning Flutter and Backend in the future with node.js or Angular or go on to develop
                     with React or
                     React Native and will be gong through Android and iOS development</p>
+                    <p><strong>UPDATE : </strong>Made site using <a href="https://sriramnjr7.github.io/CSS-cv/">CSS and HTML</a></p>
             </td>
         </tr>
     </table>
